first version of JavaLaboratories GUI (template menu)